--- a/index.css
+++ b/index.css
@@ -1,3 +1,3 @@
-#canvas{width:220px;height:100px;image-rendering:pixelated}
+#canvas{width:440px;height:200px;margin:10px;image-rendering:pixelated;border:1px black solid}
 /*! For license information please see index.css.LEGAL.txt */
 /*# sourceMappingURL=index.css.map */
