--- a/index.css
+++ b/index.css
@@ -1,3 +1,3 @@
-*{font-family:ui-sans-serif,system-ui,sans-serif,"Apple Color Emoji","Segoe UI Emoji",Segoe UI Symbol,"Noto Color Emoji"}main{max-width:460px;margin:auto;margin-top:10vh}h1{text-align:center}#inputs{display:flex;justify-content:space-between}#image{margin-left:3px}#canvas{width:440px;height:200px;margin:20px 10px;image-rendering:pixelated;border:1px black solid}#settings{margin:10px 0}#key{width:100%;margin-top:5px}
+*{font-family:ui-sans-serif,system-ui,sans-serif,"Apple Color Emoji","Segoe UI Emoji",Segoe UI Symbol,"Noto Color Emoji"}main{max-width:460px;margin:auto;margin-top:10vh}h1{text-align:center}#image{margin-left:3px}.controls{margin-top:10px}#erase,#render{margin-right:5px}#canvas{width:440px;height:200px;margin:20px 10px;image-rendering:pixelated;border:1px black solid}.colors{margin-bottom:30px}#settings{margin:10px 0}#key{width:100%;margin-top:5px}
 /*! For license information please see index.css.LEGAL.txt */
 /*# sourceMappingURL=index.css.map */
